データを更新しました。

--- a/app/src/main/res/layout/activity_input.xml
+++ b/app/src/main/res/layout/activity_input.xml
@@ -13,6 +13,7 @@
         <TableLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
             <TextView android:text="@string/hello"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
@@ -94,7 +95,29 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/day" />
             </TableRow>
-            <TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <TextView android:text="@string/gender" android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
+                <RadioButton
+                    android:id="@+id/male"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:checked="true"
+                    android:text="男性"/>
+
+                <RadioButton
+                    android:id="@+id/female"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="女性"/>
+            </TableRow>
+
+            <TableRow android:layout_height="wrap_content">
                 <Button android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/button_send"
