--- a/app/src/main/res/layout/activity_input.xml
+++ b/app/src/main/res/layout/activity_input.xml
@@ -99,22 +99,35 @@
             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+
+
                 <TextView android:text="@string/gender" android:layout_width="match_parent"
                     android:layout_height="match_parent"/>
+
+                <RadioGroup
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
                 <RadioButton
                     android:id="@+id/male"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:checked="true"
-                    android:text="男性"/>
+                    android:text="@string/gender_male"/>
 
                 <RadioButton
                     android:id="@+id/female"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="女性"/>
+                    android:text="@string/gender_female"/>
+                    </LinearLayout>
+                </RadioGroup>
+
             </TableRow>
 
             <TableRow android:layout_height="wrap_content">
