--- a/app/src/main/res/layout/activity_input.xml
+++ b/app/src/main/res/layout/activity_input.xml
@@ -64,7 +64,7 @@
                 android:layout_height="match_parent">
                 <TextView android:text="@string/number" android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
-                <EditText android:id="@+id/number"
+                <EditText android:id="@+id/order"
                     android:layout_weight="1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -103,31 +103,24 @@
 
                 <TextView android:text="@string/gender" android:layout_width="match_parent"
                     android:layout_height="match_parent"/>
-
-                <RadioGroup
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
-                    <LinearLayout
+                    <RadioGroup
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:id="@+id/gender_select"
                         android:orientation="horizontal">
-                <RadioButton
-                    android:id="@+id/male"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/gender_male"/>
-
-                <RadioButton
-                    android:id="@+id/female"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:checked="true"
-                    android:text="@string/gender_female"/>
-                    </LinearLayout>
-                </RadioGroup>
-
+                        <RadioButton
+                            android:id="@+id/male"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="@string/gender_male"/>
+                        <RadioButton
+                            android:id="@+id/female"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="@string/gender_female"/>
+                    </RadioGroup>
             </TableRow>
 
             <TableRow android:layout_height="wrap_content">
