まだ１歳は誤差あり 生年月日が選択で入力できるようになった

--- a/app/src/main/res/layout/activity_input.xml
+++ b/app/src/main/res/layout/activity_input.xml
@@ -74,26 +74,20 @@
 
             <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                xmlns:android="http://schemas.android.com/apk/res/android">
                 <TextView android:text="@string/birth" android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
-                <EditText android:id="@+id/year"
-                    android:layout_weight="1"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    xmlns:android="http://schemas.android.com/apk/res/android"
                     android:layout_height="wrap_content"
-                    android:hint="@string/year" />
-
-                <EditText android:id="@+id/month"
-                    android:layout_weight="1"
-                    android:layout_width="wrap_content"
+                    android:layout_width="wrap_content">
+                <DatePicker
+                    android:id="@+id/birth"
                     android:layout_height="wrap_content"
-                    android:hint="@string/month" />
-
-                <EditText android:id="@+id/day"
-                    android:layout_weight="1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/day" />
+                    android:layout_width="match_parent"
+                    android:calendarViewShown="false"/>
+                </LinearLayout>
             </TableRow>
 
             <TableRow
