--- a/app/src/main/res/layout/activity_input.xml
+++ b/app/src/main/res/layout/activity_input.xml
@@ -73,8 +73,8 @@
             </TableRow>
 
             <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 xmlns:android="http://schemas.android.com/apk/res/android">
                 <TextView android:text="@string/birth" android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
