表示 numberあたり

--- a/app/src/main/res/layout/activity_display.xml
+++ b/app/src/main/res/layout/activity_display.xml
@@ -6,10 +6,11 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.manaita.familytree.DisplayActivity">
 
-    <FrameLayout
-        android:id="@+id/container"
-        android:layout_height="match_parent"
-        android:layout_width="match_parent"/>
+    <TextView
+        android:id="@+id/fName"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"/>
+
 
 
 </RelativeLayout>
