--- a/app/src/main/res/layout/activity_display.xml
+++ b/app/src/main/res/layout/activity_display.xml
@@ -34,5 +34,7 @@
     <Button
         android:id="@+id/add"
         android:layout_height="wrap_content"
-        android:layout_width="fill_parent"/>
+        android:layout_width="fill_parent"
+        android:layout_alignParentBottom="true"
+        android:onClick="toAddActivity"/>
 </RelativeLayout>
