--- a/app/src/main/res/layout/activity_display.xml
+++ b/app/src/main/res/layout/activity_display.xml
@@ -19,6 +19,8 @@
             android:layout_height="wrap_content" android:textSize="40sp"/>
         <TextView android:text="@string/number" android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:textSize="40sp"/>
+        <TextView android:text="@string/age" android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:textSize="40sp"/>
         <TextView android:text="@string/birth" android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:textSize="40sp"/>
     </LinearLayout>
@@ -36,5 +38,6 @@
         android:layout_height="wrap_content"
         android:layout_width="fill_parent"
         android:layout_alignParentBottom="true"
-        android:onClick="toAddActivity"/>
+        android:onClick="toAddActivity"
+        android:text="@string/family_tree"/>
 </RelativeLayout>
